v2.5:
- add opening titles for NSMBW 4 and Retro Remix (PAL, US) by alejandroues

v2.4:
- fixed downloading NewerSMBW
- added support for New Super Mario Bros. Wii Retro Remix
  NOTE: on PAL/NTSC-J the game has the original opening title
        (there's only a opening title for NTSC-U)
- add savegame hack to Epic Super Bowser World
- add savegame hack to Newer: Holiday Special
- add savegame hack to New Super Mario Bros. 4
- leave a message where the file was created
- removed patches/03-06.arc.LH (NewerSMBW 1.02 includes it)
- moved NSMBW detection in a function (no more duplicated code)
- fixed pre-requisite checking for Koopa Country
- fixed handling .zip/.rar files with spaces in the name

v2.3:
- add support for New Super Mario Bros. 4
- fixed building JPN version of NewerHoliday

v2.2:
- change ID for Koopa Country to SMN?10
- fix handling .rar files for riivolution patches

v2.1:
- --clean no longer removes riivolution .zip files
- only remove (if already existing) the wbfs file we are going to build,
  prior to do so, not all wbfs files in the directory
- fixup support for Cannon SMBW (now built properly)
- add download-link for Cannon SMBW

v2.0:
- --download Parameter (lädt Riivolution-Daten mit wget herunter)
- --soundtrack Parameter (lädt Soundtrack mit wget herunter)
- --banner Parameter (benutzt einen custom Banner)
- --download-banner Parameter (lädt einen custom Banner mit wget herunter)

- wit auf Version 2.22c aktualisiert
- uips hinzugefügt

- Loader-Patches von DMM auf aktuellem Stand
- README hinzugefügt
- GAMEIDS hinzugefügt

Unterstützung für folgende neue Spiele:
* Another SMBW
* Newer Summer Sun
* Newer Holiday Special
* Epic Super Bowser World
* Cannon SMBW [ungetestet]
* Koopa Country
* The Legend of Zelda - Parallel Worlds

- diverse (Fehler)-Korrekturen, Verbesserungen und Umstrukturierungen

v1.2:
- Autoerkennung der Spielversion (EURv1,  EURv2, USAv1, USAv2, JPNv1)
- Fehlerbehebung bei Bearbeitung von USA/JPN-Versionen